--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "michelangelo",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.1.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
