--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@upstash/ratelimit": "^0.4.1",
     "@upstash/redis": "^1.20.2",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
