--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "michelangelo",
+  "name": "twitter-clone-2.0",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.5.1",
+  "packageManager": "pnpm@8.7.5",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "next lint",
+    "postinstall": "prisma generate",
+    "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.18.2",
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^5.2.0",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.27.1",
     "@trpc/next": "^10.27.1",
@@ -30,22 +33,23 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.13",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
+    "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
     "postcss": "^8.4.29",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
