--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twitter-clone-2.0",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@9.0.5",
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -53,5 +53,6 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
-  }
+  },
+  "packageManager": "pnpm@9.0.5"
 }
