--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.30.0",
     "@prisma/client": "^5.13.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
